--- a/styles/task-overlay.css
+++ b/styles/task-overlay.css
@@ -16,7 +16,6 @@
   z-index: 999;
   width: calc(100vw - 20px);
   margin-inline: auto;
-
 }
 
 .task-overlay.active {
@@ -162,4 +161,42 @@
 .editBtn:hover,
 .deleteBtn:hover {
   color: var(--text-white);
+}
+
+/* Edi Task Overlay */
+
+.edit-task-overlay {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--bg-color-secondary);
+  border: .5px solid var(--border-color);
+  gap: 5px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all .15s ease-in-out;
+  z-index: 999;
+  width: calc(100vw - 20px);
+  margin-inline: auto;
+}
+
+.edit-task-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.save-edit-btn {
+  padding: 6px;
+  border-radius: 100px;
+  background-color: var(--bg-color);
+  border: .5px solid var(--border-color);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, .1);
+  color: rgba(255, 255, 255, 0.8);
+  font-family: 'Poppins';
+  font-weight: 400;
+  font-size: 16px;
+  transition: color .15s ease-in-out;
 }
