--- a/styles/task.css
+++ b/styles/task.css
@@ -1,13 +1,11 @@
 .task {
-  padding-block: 10px;
-  border-bottom: .5px solid var(--border-color);
+  padding-block: 8px;
   display: flex;
   align-items: center;
 }
 
 
 .task:last-child {
-  border: none;
   padding-bottom: 0;
 }
 
@@ -29,7 +27,7 @@
 }
 
 .task-grid:hover {
-  opacity: .8;
+  opacity: .7;
 }
 
 .subject {
@@ -40,7 +38,7 @@
   height: 25px;
   border-radius: 100px;
   border: .5px solid var(--border-color);
-  background-color: var(--deutsch);
+  background-color: var(--bg-color-subject);
   color: var(--bg-color-secondary);
   font-weight: 600;
   
@@ -67,19 +65,19 @@
     width: 100%;
     padding: 5px;
     border-radius: 100px;
-    border: .5px solid var(--border-color);
+    border: .5px solid rgba(255, 98, 103, .5);
     background-color: var(--bg-color-secondary);
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
-    color: rgba(255, 255, 255, .7);
+    color: var(--text-white);
     font-family: inherit;
     font-size: 16px;
     font-weight: 400;
-    transition: color .15s ease-in-out;
+    transition: all .15s ease-in-out;
 }
 
-.add-task:hover,
-.add-task:active {
-  color: var(--text-white);
+.add-task:hover {
+  border-color: rgba(255, 98, 103, .8);
+  color: white;
 }
 
 .no-tasks {
