--- a/styles/header.css
+++ b/styles/header.css
@@ -43,13 +43,13 @@
   font-family: var(--poppins);
   font-weight: 400;
   font-size: 16px;
-  color: rgba(255, 255, 255, .7);
+  color: var(--text-white);
   transition: color .15s ease-in-out;
 }
 
 .navlink:hover,
 .navlink:active {
-  color: var(--text-white); 
+  color: var(--orange);
 }
 
 .nav-heading {
